US10116 - Toggle switch corrections Fix alignment of button text in dropdowns without creating regressions in all buttons.

--- a/assets/stylesheets/components/_buttons.scss
+++ b/assets/stylesheets/components/_buttons.scss
@@ -2,7 +2,6 @@
   border-radius: $border-radius-base;
   margin-top: 5px;
   margin-bottom: 5px;
-  white-space: normal;
 
   &.active,
   &:active,
@@ -239,12 +238,12 @@
   margin-bottom: 1rem;
 
   > label {
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 
   > .btn {
     width: 50%;
-    white-space: nowrap;
+    // white-space: nowrap;
 
     &.btn-option {
       margin-right: 0;
